added some new methods